--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
 
 h1{
     margin: 10px;
+    text-align: center;
 }
 .box {
     background-color: steelblue;
@@ -21,8 +22,8 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 400px;
-    height: 200px;
+    width: 30vw;
+    height: 25vh;
     margin: 10px;
     border-radius: 10px;
     box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
@@ -36,5 +37,5 @@ h1{
     transform: translateX(0);
 }
 .box h2{
-    font-size: 45px;
+    font-size: 25px;
 }
